--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -62,7 +62,7 @@ jobs:
     defaults:
       run:
         shell: bash
-        working-directory: ./part 2 - GKE - K8s
+        working-directory: part 2 - GKE - K8s
 
     steps:
     # Checkout the repository to the GitHub Actions runner
