--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -81,18 +81,18 @@ jobs:
       run: terraform init
       env:
         GOOGLE_CREDENTIALS: ${{ secrets.GOOGLE_CREDENTIALS }}
-        project_id: ${{ secrets.project_id }}
-        region: ${{ secrets.region }}
-        zone: ${{ secrets.zone }}
+        TF_VAR_project_id: ${{ secrets.project_id }}
+        TF_VAR_region: ${{ secrets.region }}
+        TF_VAR_zone: ${{ secrets.zone }}
 
     # Generates an execution plan for Terraform
     - name: Terraform Plan
       run: terraform plan -input=false
       env:
         GOOGLE_CREDENTIALS: ${{ secrets.GOOGLE_CREDENTIALS }}
-        project_id: ${{ secrets.project_id }}
-        region: ${{ secrets.region }}
-        zone: ${{ secrets.zone }}
+        TF_VAR_project_id: ${{ secrets.project_id }}
+        TF_VAR_region: ${{ secrets.region }}
+        TF_VAR_zone: ${{ secrets.zone }}
 
       # On push to "main", build or change infrastructure according to Terraform configuration files
       # Note: It is recommended to set up a required "strict" status check in your repository for "Terraform Cloud". See the documentation on "strict" required status checks for more information: https://help.github.com/en/github/administering-a-repository/types-of-required-status-checks
@@ -101,6 +101,6 @@ jobs:
       run: terraform apply -auto-approve -input=false
       env:
         GOOGLE_CREDENTIALS: ${{ secrets.GOOGLE_CREDENTIALS }}
-        project_id: ${{ secrets.project_id }}
-        region: ${{ secrets.region }}
-        zone: ${{ secrets.zone }}
+        TF_VAR_project_id: ${{ secrets.project_id }}
+        TF_VAR_region: ${{ secrets.region }}
+        TF_VAR_zone: ${{ secrets.zone }}
