fix: removed credentiels

--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -31,7 +31,6 @@ jobs:
       uses: hashicorp/setup-terraform@v1
       with:
         cli_config_credentials_token: ${{ secrets.TF_API_TOKEN }}
-        
 
     # Initialize a new or existing Terraform working directory by creating initial files, loading any remote state, downloading modules, etc.
     - name: Terraform Init
@@ -41,6 +40,7 @@ jobs:
         TF_VAR_project_id: ${{ secrets.project_id }}
         TF_VAR_region: ${{ secrets.region }}
         TF_VAR_zone: ${{ secrets.zone }}
+        TF_VAR_GOOGLE_CREDENTIALS_File: ${{ secrets.GOOGLE_CREDENTIALS_File }}
 
     # Generates an execution plan for Terraform
     - name: Terraform Plan
@@ -50,6 +50,7 @@ jobs:
         TF_VAR_project_id: ${{ secrets.project_id }}
         TF_VAR_region: ${{ secrets.region }}
         TF_VAR_zone: ${{ secrets.zone }}
+        TF_VAR_GOOGLE_CREDENTIALS_File: ${{ secrets.GOOGLE_CREDENTIALS_File }}
 
       # On push to "main", build or change infrastructure according to Terraform configuration files
       # Note: It is recommended to set up a required "strict" status check in your repository for "Terraform Cloud". See the documentation on "strict" required status checks for more information: https://help.github.com/en/github/administering-a-repository/types-of-required-status-checks
@@ -61,3 +62,4 @@ jobs:
         TF_VAR_project_id: ${{ secrets.project_id }}
         TF_VAR_region: ${{ secrets.region }}
         TF_VAR_zone: ${{ secrets.zone }}
+        TF_VAR_GOOGLE_CREDENTIALS_File: ${{ secrets.GOOGLE_CREDENTIALS_File }}
